# ORBITAL

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
baselines/: __init__.py  unconstrained_mappo_mma.py  unconstrained_mappo_mma_pistonball.py
cleanmarl/: __init__.py  orbital_cli.py  orbital_runner.py
cleanmarl/cleanmarl/: coma_lstm.py  coma_lstm_multienvs.py  ippo.py  maddpg.py  maddpg_lstm.py  maddpg_lstm_multienvs.py  maddpg_multienvs.py  mappo.py  mappo_lstm.py  mappo_lstm_multienvs.py  qmix_lstm.py
configs/: cleanmarl_orbital_empty.yaml  cleanmarl_pistonball_empty.yaml  orbital_mappo.yaml  orbital_mappo_empty_mma.yaml  pistonball_mappo_empty_mma.yaml
configs/orgs/: empty.json  orbital_basic.json  pistonball_empty.json
docs/: ENV_SPECS.md
examples/: human_render.py  human_render_3d_forced_overview.py  manual_reward_01_ground_intake.py  manual_reward_02_observe_after_intake.py  manual_reward_03_single_satellite_loop.py  manual_reward_04_collaborative_loop.py  random_policy.py
marl_lib/: __init__.py  checkpoint.py  cli.py  config.py  envs.py  eval.py  networks.py  plotting.py  preprocessing.py  trainer.py
mma/: __init__.py  cli.py  organization.py  registry.py  wrapper.py
mma/presets/: __init__.py  orbital.py
orbital/: __init__.py
orbital/envs/: __init__.py  orbital3d_aec.py  orbital3d_parallel.py  orbital_aec.py  orbital_parallel.py
orbital/envs/core/: __init__.py  config.py  dynamics.py  reward.py  spaces.py
orbital/envs/rendering/: __init__.py  factory.py  pygame_renderer.py  pyvista_renderer.py
presentation/: presentation.tex
tests/: test_api.py  test_cleanmarl_integration.py  test_determinism.py  test_kepler_orbits.py  test_marl_lib.py  test_task_reward_hierarchy.py
