[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbital"
version = "0.1.0"
description = "ORBITAL PettingZoo multi-agent benchmark"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ORBITAL Contributors"}]
dependencies = [
  "numpy>=1.24",
  "gymnasium>=0.29",
  "pettingzoo>=1.24",
  "networkx>=3.0",
  "torch>=2.0"
]

[project.optional-dependencies]
render = ["pygame>=2.5"]
render3d = ["pyvista>=0.43", "vtk>=9.2"]
train = ["optuna>=3.0", "imageio>=2.31", "pyyaml>=6.0", "matplotlib>=3.7", "pettingzoo[butterfly]>=1.24"]
dev = ["pytest>=7.0", "pettingzoo[test]>=1.24", "pygame>=2.5", "imageio>=2.31"]

[project.scripts]
marl-train = "marl_lib.cli:train_main"
marl-eval = "marl_lib.cli:eval_main"
marl-tune = "marl_lib.cli:tune_main"
mma-export-org = "mma.cli:export_org_main"

[tool.setuptools]
packages = [
  "orbital",
  "orbital.envs",
  "orbital.envs.core",
  "orbital.envs.rendering",
  "baselines",
  "mma",
  "mma.presets",
  "marl_lib"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
